force-app/main/default/objects/Square_Key__c/Square_Key__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Square Key</label>
</CustomObject>