force-app/main/default/objects/Square_Key__c/fields/Customer_Id_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id_Api_Name__c</fullName>
    <label>Customer Id Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>