force-app/main/default/objects/Square_Key__c/fields/Square_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Square_Endpoint__c</fullName>
    <label>Square Endpoint</label>
    <type>TextArea</type>
</CustomField>