force-app/main/default/objects/Square_Key__c/fields/Square_Version__c.field-meta.xml
<CustomField>
    <fullName>Square_Version__c</fullName>
    <label>Square Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>